--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <a  class="menu-item active">
                         <span><i class="uil uil-home"></i></span> <h3>Home</h3>
                     </a>
-                    <a class="menu-item" id="explore">
+                    <a class="menu-item" id="explore" href="explore.html">
                         <span><i class="uil uil-compass"></i></span> <h3>Explore</h3>
                     </a>
                     <a class="menu-item" id="notifications">
